reformatted few things

--- a/Scripts/Basic Looping.ipynb
+++ b/Scripts/Basic Looping.ipynb
@@ -74,17 +74,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to loop through lists,sets and tuples\n",
-    "You can use them interchangable, since all of the represent a sequence.\n",
-    "<br>\n",
+    "### How to loop through Lists, Sets and Tuples\n",
+    "You can use them interchangable, since all of the represent a sequence."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Important two function are usually used when iterating of indeces (range) or indeces + values (enumerate)\n",
+    "\n",
+    "<ul>\n",
+    "<li>\n",
     "The range function provides a sequence from zero to the value that you add as parameter of the range function such as len(loop_list)\n",
-    "<br>\n",
-    "The enumerator function provides a list of tuples [(index, value)] for each element in the list\n"
+    "</li>\n",
+    "<li>\n",
+    "The enumerator function provides a list of tuples [(index, value)] for each element in the list\n",
+    "</li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +111,9 @@
       "Indeces loop:1\n",
       "Indeces loop:2\n",
       "Indeces loop:3\n",
-      "Index, Value Loop: 0,1.5\n",
+      "Index, Value Loop: 0,5\n",
       "Index, Value Loop: 1,Hello\n",
-      "Index, Value Loop: 2,5\n",
+      "Index, Value Loop: 2,1.5\n",
       "Index, Value Loop: 3,True\n"
      ]
     }
@@ -116,13 +128,13 @@
     "    print(\"Indeces loop:\" + str(i))\n",
     "    \n",
     "# this loops through the indeces and the values at the same time  \n",
-    "for i,t in enumerate(loop_set):\n",
+    "for i,t in enumerate(loop_list):\n",
     "    print(\"Index, Value Loop: \" + str(i) + \",\" + str(t))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -138,10 +150,11 @@
     }
    ],
    "source": [
-    "# What happens with a string?\n",
+    "# What happens when we loop through a string?\n",
     "word = \"hello\"\n",
     "for i in word:\n",
-    "    print(i) # you can see that it is unpacked to the minimal unit which would be the letter"
+    "    print(i) \n",
+    "# you can see that it is unpacked to the minimal unit which would be the letter"
    ]
   },
   {
@@ -150,12 +163,12 @@
    "metadata": {},
    "source": [
     "### Loop through dictionary\n",
-    "We can also loop through dictionaries. The default iterator of a dictionary is the keys. If we use the values() function we can create a list of values that serves as iterator. We can use this as a normal list to loop throught. You can also use the keys() function to represent a list of keys. But for looping the variable name of the dict is enough to go through each individual key"
+    "We can also loop through dictionaries. The default iterator of a dictionary are the keys. If we use the values()function we can create a list of  all the values in the dictionary that can serve as iterator. We can then just use a normal for loop. You can also use the keys() function to represent a list of keys. But for looping the variable name of the dict is enough to go through each individual key, no need for .keys()."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
