added documentation to kmeans

--- a/Scripts/Basic Clustering.ipynb
+++ b/Scripts/Basic Clustering.ipynb
@@ -41,6 +41,11 @@
     }
    ],
    "source": [
+    "# This function allows us to artifically make blobs using normal gaussian distribtuion\n",
+    "# This will construct an array\n",
+    "# n_samples indicate the number of points we want to sample\n",
+    "# centers define the number of distinged blob clusters\n",
+    "# random state is just a random number which should be added for reproducability reason\n",
     "X, _ = make_blobs(n_samples=1000, centers=4, random_state=42)\n",
     "X"
    ]
@@ -65,8 +70,9 @@
     }
    ],
    "source": [
+    "# Here we visualized the blobs by having a look at the first and second dimension as indicated by the array slicing\n",
     "fig, ax = plt.subplots()\n",
-    "sns.despine()\n",
+    "sns.despine() # removes the upper and the right axis\n",
     "sns.scatterplot(x = X[:,0], y = X[:,1], linewidth = 0, alpha= 0.5)\n",
     "plt.title(\"Randomly generated Blobs\")\n",
     "plt.savefig(\"K-Means.pdf\", dpi = 500)"
@@ -79,8 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we want to scale the data to have a mean of 0 and a standard deviation of 1\n",
     "scaler = StandardScaler()\n",
-    "scaled_features = scaler.fit_transform(X)"
+    "scaled_features = scaler.fit_transform(X) # fit_transform directly give you the resulting array"
    ]
   },
   {
@@ -90,6 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# here we perform clustering on the scaled data\n",
+    "# for this KMeans is used\n",
+    "# In Kmeans the number of clusters are predefined based on knowledge or an educational guess\n",
     "km = KMeans(\n",
     "    n_clusters=4, init='random',\n",
     "    n_init=10, max_iter=300, \n",
@@ -105,6 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Instead of KMeans we can also use DBScan which is an alogrithm that had a look at distances between points,\n",
+    "# If the distance is in the range of eps than they are considered to belong to the same cluster\n",
     "dm = DBSCAN(\n",
     "    eps=0.5,\n",
     "    min_samples = 5\n",
@@ -206,7 +219,8 @@
     }
    ],
    "source": [
-    "# typicall way of extracting data is the elbow point\n",
+    "# typicall way of extracting the number of clusters in a dataset to use in KMEANS is performed determining the elbow point\n",
+    "# IN this method the distance from each point to the clusters will be evaluated \n",
     "distortions = []\n",
     "for i in range(1, 11):\n",
     "    km = KMeans(\n",
@@ -240,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
