added comments to basic matplotlib

--- a/Scripts/Basic Matplotlib.ipynb
+++ b/Scripts/Basic Matplotlib.ipynb
@@ -130,7 +130,7 @@
    ],
    "source": [
     "fig = plt.figure() # here we can further decide on how many plots and the figure size\n",
-    "ax = plt.axes()\n",
+    "ax = plt.axes() # initialize the axis\n",
     "plt.plot(array,\n",
     "         np.sin(array),\n",
     "         \"o\", \n",
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "# therefore we could also just do\n",
+    "# here you can see how we can change size and colors of the points based on weights such as in sizes or based on colors ranges\n",
     "fig = plt.figure\n",
     "ax = plt.axes()\n",
     "colors = np.random.rand(100)\n",
@@ -219,18 +219,18 @@
     }
    ],
    "source": [
-    "# therefore we could also just do\n",
+    "# in addition we can also \n",
     "fig = plt.figure\n",
     "ax = plt.axes()\n",
     "# this function can be also used to give different sizes to the different points\n",
     "# this can act as additional dimension for the viewer\n",
     "plt.scatter(array, np.sin(array), color = \"green\", s = 15, label = \"Data1\")\n",
-    "plt.scatter(array, \n",
-    "            np.cos(array), \n",
-    "            c = colors, \n",
-    "            s = sizes, \n",
-    "            cmap = \"viridis\", \n",
-    "            label = \"Data2\")\n",
+    "plt.scatter(array, # x-data \n",
+    "            np.cos(array), #y-data\n",
+    "            c = colors,  # color range\n",
+    "            s = sizes, # size ranges\n",
+    "            cmap = \"viridis\",  # thsi describes the colormap used\n",
+    "            label = \"Data2\") # here the label name is setted for the legend\n",
     "ax.legend(loc = \"upper right\", frameon = True, shadow = True, borderpad = 1) # loc lower center"
    ]
   },
@@ -266,10 +266,10 @@
    "source": [
     "# we can also visualize errors \n",
     "error = 0.5\n",
-    "plt.errorbar(array, np.sin(array), yerr = error)\n",
+    "plt.errorbar(array, np.sin(array), yerr = error) # plot a sinus curve with an errorbar\n",
     "# but error can be also of length of the sequence\n",
     "y_err = np.random.rand(100)\n",
-    "plt.errorbar(array, np.cos(array), yerr = y_err)\n",
+    "plt.errorbar(array, np.cos(array), yerr = y_err) # plot a cosinus cure with an errobar\n",
     "# we can also change the style of the errorbar \n",
     "plt.errorbar(array, \n",
     "             array, \n",
@@ -507,6 +507,7 @@
     "# Seaborn\n",
     "# https://seaborn.pydata.org/examples/index.html\n",
     "# install first\n",
+    "# this is just a scatterplot\n",
     "import seaborn as sns\n",
     "\n",
     "fig,ax = plt.subplots(figsize = (5,5))\n",
@@ -537,6 +538,7 @@
     }
    ],
    "source": [
+    "# this is a regression plot combining the fit of the best line with a scatterplot\n",
     "fig,ax = plt.subplots(figsize = (5,5))\n",
     "sns.despine()\n",
     "sns.regplot(x = data_normal_1, y = data_normal_2)\n",
