added function basics

--- a/Scripts/Basic Functions.ipynb
+++ b/Scripts/Basic Functions.ipynb
@@ -9,6 +9,87 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions are blocks in python that take arguments and execute some code based on these arguments. Finally, return values can be specified, although returning is not a must, Functions in general also if not specified return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function without parameters and return values\n",
+    "def print_number():\n",
+    "    print(1)\n",
+    "    \n",
+    "# without calling the function nothing happens\n",
+    "# to call the function use the name and () like below\n",
+    "print_number()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function with parameters but without return value\n",
+    "\n",
+    "def print_number(number):\n",
+    "    number += 1 # number will be increased by one\n",
+    "    print(number)\n",
+    "    \n",
+    "# to call the function you have to add a number because this parameter number is necessary to execute the function like below\n",
+    "print_number(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function with parameters and return values\n",
+    "def print_number(number1, number2):\n",
+    "    \n",
+    "    final_number = number1 + number2\n",
+    "    return final_number\n",
+    "\n",
+    "# Now we added a second parameter as well as a return value, this function will return our calculated final number, to work further with this we have to put \n",
+    "# this into a new variable like below\n",
+    "calculated_number = print_number(1,2)\n",
+    "print(calculated_number)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -81,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
