--- a/Scripts/Basic Python.ipynb
+++ b/Scripts/Basic Python.ipynb
@@ -10,42 +10,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "32d9b13e",
-   "metadata": {},
-   "source": [
-    "## Usually the First Lines correspond to imports \n",
-    "<br>\n",
-    "<p> Import Packages and Modules in Python:  Package Manger in Python is called pip. Pip can be used to download packages like Pandas, Seaborn and more which are not shipped with basic Python! When the package download and installation was succesful, packages can be imported as illustrated below. Usually this is performed at the top of your Script/Program ect. </p>\n",
-    "\n",
-    "<code> \n",
-    "import package\n",
-    "import * from package\n",
-    "</code>\n",
-    "<br>\n",
-    "<p> The second import is called wild card import and should usually be avoided. Therefore usually directly import the used object such as: </p>\n",
-    "<br>\n",
-    "<code>\n",
-    "from collections import Counter\n",
-    "from pandas import melt\n",
-    "</code>\n",
-    "<br>\n",
-    "\n",
-    "<p> In addition we can also serve acronyms for the package like in: </p>\n",
-    "<code> \n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "</code>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b32891fa",
    "metadata": {},
    "source": [
     "## Data Types in Pyton\n",
     "<br>\n",
-    "<p> <b>Question:</b> What Data Types are available in Python ??? </p>"
+    "<p> <b> The following data types are available in python </b></p>"
    ]
   },
   {
@@ -102,15 +74,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48386fbe",
    "metadata": {},
    "source": [
     "### Data Structures in Pyton\n",
     "<br>\n",
-    "<p> Data Structures are objects in Python that can held data of various types. The data structures can  usually distingushed between mutable and immutable data structures. </p>\n",
+    "<p> Data Structures are objects in Python that contain data of various types. The data structures types can usually distingushed based on their properties such as mutability, sortability or indexability </p>\n",
     "<br>\n",
-    "<p> Usual Functions for sets: </p>\n",
+    "\n",
+    "### First Data Structure is the Set\n",
+    "A set is mutable but not sorted and therefor indexing does not make a lot of sense\n",
+    "<br>\n",
+    "\n",
+    "<b> Usual Functions for sets: </b>\n",
+    "<br>\n",
     "<code>\n",
     "    set_1 = {1,2,3,4}\n",
     "    set_2 = {1,2,9}\n",
@@ -122,14 +101,12 @@
     "    set_2.issubset(set_1)\n",
     "    next(iter(set_1))\n",
     "</code>\n",
-    "<br>\n",
-    "<p> Try yourself: build a using the following numbers (1,2,3,4,1,2,3,7,9). Create a second set with the numbers (10,1,7,9). Build the intersections and union after removing the 7 from the first set. <br> What are the results ? </br>\n",
-    "</p> "
+    "<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "ec5b010f",
    "metadata": {},
    "outputs": [
@@ -139,13 +116,13 @@
        "{1, 2, 3, 4, 7, 9, 10}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Solution programmed\n",
+    "# here is an example for intersection and unions\n",
     "set1 = {1,2,3,4,1,2,3,7,9}\n",
     "set2 = {10,1,7,9}\n",
     "set1.remove(7)\n",
@@ -154,15 +131,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b38267b7",
    "metadata": {},
    "source": [
-    "## Data Structures in Pyton\n",
-    "\n",
+    "## The second data structure is a List:\n",
     "<br>\n",
-    "Data Structures are objects in Python that can held data of various types. The data structures can usually distingushed between mutable and immutable data structures.\n",
-    "\n",
+    "A list is sorted and mutable!\n",
     "<br>\n",
     "\n",
     "Usual Functions for lists:\n",
@@ -177,237 +153,24 @@
     "    list_1.extend(list_2)\n",
     "    list_1.append(list_2)\n",
     "    list_1.reverse()\n",
-    "    next(iter(set_1))\n",
+    "    next(iter(set_1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b6e5ee26",
+   "metadata": {},
+   "source": [
+    "### The next data structure is a dictionary\n",
     "\n",
-    "<br>\n",
-    "Try yourself: build a using the following numbers (1,2,3,4,1,2,3,7,9). Create a second set with the numbers (10,1,7,9). Build the intersections and union after removing the 7 from the first set. \n",
-    "What are the results ? "
+    "A dictionary always consists of a key and an associated value (key: value). A dictionary is usually unsorted, also of course there exist a sorted dictionary in python.\n",
+    "A dictionary is mutable, which means we can change the data that are holded by the dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "c1fbc98c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Mistakes by reference\n",
-    "list_a = [1,2,3,4]\n",
-    "list_b = list_a.copy()\n",
-    "list_b.pop()\n",
-    "list_b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ca9bde9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yes\n"
-     ]
-    }
-   ],
-   "source": [
-    "# if conditions\n",
-    "# if:\n",
-    "# elif:\n",
-    "# else:\n",
-    "# replace with if if instead of if else\n",
-    "# or use a range instead of multiple queries\n",
-    "value = 60\n",
-    "# here we can use the operator\n",
-    "if 60 <= value < 90:\n",
-    "    print(\"Yes\")\n",
-    "elif value < 80:\n",
-    "    print(\"its below 80\")\n",
-    "else:\n",
-    "    print(\"No\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "af1eb876",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You can become a Data Scientist\n"
-     ]
-    }
-   ],
-   "source": [
-    "# we in addition have also a match switch statement\n",
-    "# only possible in python 3.10\n",
-    "# Can be used for ranges too \n",
-    "# Its a good equivalent for elif collections\n",
-    "lang = input(\"What's the programming language you want to learn? \")\n",
-    "\n",
-    "match lang:\n",
-    "    case \"JavaScript\":\n",
-    "        print(\"You can become a web developer.\")\n",
-    "\n",
-    "    case \"Python\":\n",
-    "        print(\"You can become a Data Scientist\")\n",
-    "\n",
-    "    case \"PHP\":\n",
-    "        print(\"You can become a backend developer\")\n",
-    "    \n",
-    "    case \"Solidity\":\n",
-    "        print(\"You can become a Blockchain developer\")\n",
-    "\n",
-    "    case \"Java\":\n",
-    "        print(\"You can become a mobile app developer\")\n",
-    "    case _:\n",
-    "        print(\"The language doesn't matter, what matters is solving problems.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0284447a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "4\n",
-      "0 1\n",
-      "1 2\n",
-      "2 4\n",
-      "3 4\n",
-      "0 1\n",
-      "1 2\n",
-      "2 4\n",
-      "3 4\n",
-      "1 1\n",
-      "2 2\n",
-      "4 4\n",
-      "4 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# how to iterate over lists?\n",
-    "# zip and no zip\n",
-    "list_a = [1,2,4,4]\n",
-    "for i in list_a:\n",
-    "    print(i)\n",
-    "    \n",
-    "for i in range(len(list_a)):\n",
-    "    print(i,list_a[i])\n",
-    "    \n",
-    "for index, value in enumerate(list_a):\n",
-    "    print(index, value)\n",
-    "    \n",
-    "for i,t in zip(list_a, list_a):\n",
-    "    print(i,t)\n",
-    "    \n",
-    "    \n",
-    "###############################\n",
-    "# exercise:\n",
-    "# take list_a and only multiple if the index position is even\n",
-    "# than update the list and replace the value\n",
-    "################################\n",
-    "# second excersise:\n",
-    "# how can you print consecute letters like bigrams of words such as emma?\n",
-    "# should be like:\n",
-    "#em\n",
-    "#mm\n",
-    "#ma\n",
-    "# use zip for this\n",
-    "###############################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ba7bb22a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "[2.0, 2, 0.5, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# and here now we learn about exceptions!\n",
-    "# try the same with division\n",
-    "# what happens when a division by zero happens\n",
-    "for index, value in enumerate(list_a):\n",
-    "    if index % 2 == 0:\n",
-    "        print(index)\n",
-    "        list_a[index] = 2/value  \n",
-    "    else:\n",
-    "        list_a\n",
-    "print(list_a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "6e0df21b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0\n",
-      "division by zero\n",
-      "[2.0, 2, 0, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# and here now we learn about exceptions!\n",
-    "# try the same with division\n",
-    "# what happens when a division by zero happens\n",
-    "list_zero = [1,2,0,1]\n",
-    "for index, value in enumerate(list_zero):\n",
-    "    if index % 2 == 0:\n",
-    "        print(value)\n",
-    "        try:\n",
-    "            list_zero[index] = 2/value  \n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            continue\n",
-    "    else:\n",
-    "        list_zero\n",
-    "print(list_zero)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fc1fca36",
    "metadata": {},
    "outputs": [
@@ -426,10 +189,7 @@
     }
    ],
    "source": [
-    "# dictionaries:\n",
-    "# dictionaries evaluate like this\n",
-    "# here you can see mutatbility\n",
-    "# how to process the data\n",
+    "# Typical Functions for dictionaries\n",
     "course_dict = {\"teacher\": \"Maximilian Zeidler\", \"students\": [\"Student1\", \"Student2\"]}\n",
     "print(course_dict[\"teacher\"])\n",
     "print(course_dict.get(\"teacher\"))\n",
@@ -445,71 +205,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "ebb9d66b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "teacher\n",
-      "students\n",
-      "K\n",
-      "a\n",
-      "i\n",
-      " \n",
-      "K\n",
-      "u\n",
-      "m\n",
-      "m\n",
-      "e\n",
-      "r\n",
-      "teacher Kai Kummer\n",
-      "Student1\n",
-      "Student2\n",
-      "new_student2\n",
-      "new_student2\n",
-      "students ['Student1', 'Student2', 'new_student2', 'new_student2']\n",
-      "teacher\n",
-      "students\n",
-      "Kai Kummer\n",
-      "['Student1', 'Student2', 'new_student2', 'new_student2']\n"
-     ]
-    }
-   ],
    "source": [
-    "# loop through dictionaries\n",
-    "for key in course_dict: # this loops through keys\n",
-    "    print(key)\n",
-    "    \n",
-    "# go through all the keys   \n",
-    "for key in course_dict.keys(): # runs through the keys # can you access the values per keys?\n",
-    "    print(key) # same as first\n",
-    "\n",
-    "for value in course_dict.values(): # runs through the value\n",
-    "    print(value)\n",
-    "    \n",
-    "# this should show the looping behavior with different data structures\n",
-    "for key, value in course_dict.items():\n",
-    "    for i in value:\n",
-    "        print(i)\n",
-    "    print(key, value)\n",
-    "# question: build a dictionary of classmates and give them a mark for the course\n",
-    "# then assign a new key with ranking if student has a 1 or 2 then rank him as top \n",
-    "# else as ok\n",
-    "# as a help making life more easier you cann also assign an empty list to a key"
+    "### The next data structure is a tuple!\n",
+    "<br>\n",
+    "A tuple is a sequence that is sorted but not mutable. This means we cannot change the tuple after initialization! But we can retrieve the values at a certain index of a tuple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "516b59f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Can you implement the switch statement as an Dictionary?"
+    "tuple = (2,1,1)\n",
+    "tuple[0] # position 1\n",
+    "tuple[0:2] # position 1-3"
    ]
   },
   {
